# dorrego

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  Trunk.toml  balances.cpp  balances.h  balances_test.cpp  command.cpp  command.h  command_balances.cpp  command_orderbook.cpp  command_test.cpp  context.cpp  context.h  in_channel.cpp  in_channel.h  index.html  listener.cpp  listener.h  main.cpp  main.h.in  main_test.cpp  orderbook.cpp  orderbook.h  orderbook_test.cpp  saver.cpp  saver.h  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependantbot.yml
.github/workflows/: building.yml  cmake.yml  release.yml  rust.yml
docker/: Dockerfile  README.md
docs/: index.html
src/: main.rs  tailwind.css
src/components/: body.rs  footer.rs  mod.rs  nav.rs  news.rs  notfound.rs  project.rs  report.rs
